# Porthole

./: .gitignore  Cargo.toml  README.md
src/: holesail.rs  main.rs
ui/: app-window.slint
