[package]
name = "porthole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
directories = "5.0"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true
